--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@colyseus/auth": "^0.15.10",
     "@colyseus/monitor": "^0.15.0",
     "@colyseus/playground": "^0.15.3",
     "@colyseus/tools": "^0.15.0",
