--- a/server/.env.development
+++ b/server/.env.development
@@ -1,1 +1,4 @@
 JWT_SECRET=generate-a-secret-key-here
+
+DISCORD_CLIENT_ID=PASTE_OAUTH2_CLIENT_ID_HERE
+DISCORD_CLIENT_SECRET=PASTE_OAUTH2_CLIENT_SECRET_HERE
